2023-09-09  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/xtrn.c Fixed crash on dereferenced NULL pointer.

2023-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (SetImageAttribute): Remove
	SetImageAttribute() Extending attribute value text code entirely.

2023-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the News.

	* magick/attribute.c (SetImageAttribute): Disable attribute
	extension deprecation warning printf.  It may be that eliminating
	support for attribute value extension will never happen due to
	subtly entrenched internal usage.

	* coders/pnm.c (ReadPNMImage): Fix reading comments from PAM
	format.

2023-09-06  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Reverting to BI_BITFIELD. BI_ALPHABITFIELDS seems
	to be very rare.

2023-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (ipa_draw_text): Treat pointer inputs as if they
	may be NULL.  Change live printfs to traces.  Adjust white-space
	in whole module to current conventions.  Addresses SourceForge
	issue #724 "Old WMF display: assert fails in draw.c", although I
	am unable to reproduce it.

2023-09-05  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Sorry for a previous commit. After some
	investigations it seems that bit field masks are behind header
	when BI_SIZE=40.

2023-09-04  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Default bit split for older BMPs with 32bpp and
	BI_BITFIELDS set is crazy. Verified against IrFanView and
	bmpsuite-2.7.zip - image g/rgb32bf.bmp.

2023-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (ResizeImage): Restore vertical/horizontal
	filter order decision logic which was in place before the 1.3.41
	release since it may result in tiny changes to low order bits in
	16-bit/sample images, which may be concerning to some.  Resolves
	SourceForge issue #723 "montage result differ between 1.3.40 and