@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230907"
-#define public MagickPackageReleaseDate "snapshot-20230907"
+#define public MagickPackageVersionAddendum ".020230910"
+#define public MagickPackageReleaseDate "snapshot-20230910"
