@@ -11158,6 +11158,17 @@ WandExport MagickWand *NewMagickWand(void)
   /*
     Initialize GraphicsMagick in case it is not already initialized.
   */
+  /*
+    Initialize locale from environment variables (LANG, LC_CTYPE,
+    LC_NUMERIC, LC_TIME, LC_COLLATE, LC_MONETARY, LC_MESSAGES,
+    LC_ALL), but require that LC_NUMERIC use common conventions.  The
+    LC_NUMERIC variable affects the decimal point character and
+    thousands separator character for the formatted input/output
+    functions and string conversion functions.
+  */
+  (void) setlocale(LC_ALL,"");
+  (void) setlocale(LC_NUMERIC,"C");
+
   InitializeMagick(NULL);
 
   wand=MagickAllocateMemory(MagickWand *,sizeof(MagickWand));
