@@ -37,6 +37,22 @@
 </div>
 
 <div class="document">
+<p>2023-09-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>tests/{constitute.c, drawtest.c, rwblob.c, rwfile.c}: Initialize
+locale settings the same as the 'gm' utility.</p></li>
+<li><p>magick/{drawing_wand.c, drawtest.c, magick_wand.c, pixel_wand.c,
+wandtest.c}: Initialize locale settings the same as the 'gm'
+utility.</p></li>
+</ul>
+</blockquote>
+<p>2023-09-09  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;yandex&#46;com">JaFojtik<span>&#64;</span>yandex<span>&#46;</span>com</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>coders/xtrn.c Fixed crash on dereferenced NULL pointer.</p></li>
+</ul>
+</blockquote>
 <p>2023-09-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
